# Opengl-Playground

./: .gitmodules  CMakeLists.txt  README.md
1-Startup/: 1-Startup.frag  1-Startup.vert  CMakeLists.txt  main.cpp  simple.geom
2-SphereTexture/: CMakeLists.txt  main.cpp  simple.frag
3-Tessellation-Triangle/: 3-tessellation-triangle.tcs  3-tessellation-triangle.tes  3-tessellation-triangle.vert  CMakeLists.txt  main.cpp
4-UpdateTexture/: 4-update-texture.frag  CMakeLists.txt  main.cpp
5-PlaneTexture/: CMakeLists.txt  main.cpp
6-PlaneProjection/: 6-plane-projection.vert  CMakeLists.txt  main.cpp
7-YUVShader/: 7-YUVShader.vert  7-shader.frag  7-shader.vert  CMakeLists.txt  main.cpp
7-YUVShader/images/: 914x558.nv12  914x558.nv21  914x558.yuv420p
8-QtOpenGL/: glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  testopengl.pro
PlayGround/: PlayGround.sln
PlayGround/CreateSphere/: CreateSphere.vcxproj  CreateSphere.vcxproj.filters  Sphere.cpp  Sphere.h  main.cpp  sphereShader.frag  sphereShader.vert
PlayGround/PlayGround/: PlayGround.vcxproj  PlayGround.vcxproj.filters  main.cpp  simple.frag  simple.vert
PlayGround/TextureWrapMode/: TextureWrapMode.vcxproj  TextureWrapMode.vcxproj.filters  main.cpp  resource.h  simple.frag  simple.vert
common/: controls.cpp  glad.c  models.cpp  models.hpp  shader.cpp  shader.hpp
